feat: add verification register logic
