# docs/swagger.yaml
@@ -14,6 +14,18 @@ definitions:
       access:
         type: string
     type: object
+  schemas.AuthVerificationKeySchema:
+    properties:
+      verification_key:
+        type: string
+    type: object
+  schemas.AuthVerificationSchema:
+    properties:
+      code:
+        type: string
+      verification_key:
+        type: string
+    type: object
   schemas.UserCreate:
     properties:
       email:
@@ -67,7 +79,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.AuthResponseSchema'
+            $ref: '#/definitions/schemas.AuthVerificationKeySchema'
+      tags:
+      - Auth
+  /auth/verify:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Verification data
+        in: body
+        name: verification
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.AuthVerificationSchema'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.AuthVerificationKeySchema'
       tags:
       - Auth
 swagger: "2.0"
